--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "dev": "nodemon src/server.ts",
-        "test": "jest",
+        "test": "import_run_test.bat",
         "initDB": "ts-node src/lorem/lorem.ts"
     },
     "keywords": [],
