--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
         "strict": true, /* Enable all strict type-checking options. */
         "skipLibCheck": true, /* Skip type checking all .d.ts files. */
 
-        "outDir": "./dist"
+        "outDir": "./dist",
     },
     "include": ["src/**/*", "**/tests/**/*.test.ts"]
 }
